--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1 id="about" class="title text-center"><span>About Me 😄</span></h1>
-					<p class="lead text-center">I am a freshman, pursuing Bachelors in Technology and working on academic and industrial projects.
-						Actively participating in Open source projects and an NCC candidate.
+					<p class="lead text-center">I am a freshman, pursuing Bachelors in Technology and working on academic and industrial projects.<br/>
+						I am a self taught Front-end Web Developer, currently diving into Machine Learning and Designing.
 						</p>
 					<div class="space"></div>
 					<div class="row">
 						<div class="col-md-6">
-							<img src="images/section-image-1.png" alt="">
+							<img src="images/education.jpg" alt="">
 							<div class="space"></div>
 						</div>
 						<div class="col-md-6">
@@ -314,6 +314,16 @@
 							<p>Dolores quam magnam aadipisicing sit amet, consectetur adipisicing elit. Atque sed,
 								quidem quis praesentium, ut unde molestias velit eveniet, facere autem saepe autrunt.
 							</p>
+						</div>
+						<div class="col-md-6">
+							<img src="images/experience.jpg" alt="">
+							<div class="space"></div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/skills.jpg" alt="">
+							<div class="space"></div>
 						</div>
 						<div class="col-md-6">
 							<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -379,6 +389,32 @@
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<p>Lorem ipsum dolor sit amet, adipisicing sit amet, consectetur adipisicing elit. Atque
+								sed, quidem quis praesentium, ut unde error commodi architecto, laudantium culpa optio
+								corporis quod earumdignissimos eius mollitia et quas officia doloremque.</p>
+							<ul class="list-unstyled">
+								<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum enimdolor sit
+									amet</li>
+								<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Explicabo deleniti neque
+									aliquid</li>
+								<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Consectetur adipisicing elit
+								</li>
+								<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum dolor sit amet
+								</li>
+								<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Quo issimos molest quibusdam
+									temporibus</li>
+							</ul>
+							<p>Dolores quam magnam aadipisicing sit amet, consectetur adipisicing elit. Atque sed,
+								quidem quis praesentium, ut unde molestias velit eveniet, facere autem saepe autrunt.
+							</p>
+						</div>
+						<div class="col-md-6">
+							<img src="images/achievement.jpg" alt="">
+							<div class="space"></div>
 						</div>
 					</div>
 				</div>
@@ -1017,15 +1053,31 @@
 						<!-- Bottom Carousel Indicators -->
 						<ol class="carousel-indicators">
 							<li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
-							<li data-target="#quote-carousel" data-slide-to="1"></li>
-							<li data-target="#quote-carousel" data-slide-to="2"></li>
+							<!--<li data-target="#quote-carousel" data-slide-to="1"></li>
+							<li data-target="#quote-carousel" data-slide-to="2"></li>-->
 						</ol>
 
 						<!-- Carousel Slides / Quotes -->
 						<div class="carousel-inner">
 
 							<!-- Quote 1 -->
-							<div class="item active">
+							<div class="item  active">
+								<blockquote>
+									<div class="row">
+										<div class="col-sm-3 text-center">
+											<img class="img-circle"
+												src="https://avatars1.githubusercontent.com/u/20839661?s=400&u=55b06f45fb798657d7b89bf6f1592bfe82e68cac&v=4"
+												style="width: 100px;height:100px;">
+										</div>
+										<div class="col-sm-9">
+											<p>We have a great time working the project submitted was really good. Great job!</p>
+											<small>Abhilash</small>
+										</div>
+									</div>
+								</blockquote>
+							</div>
+							<!-- Quote 2 
+							<div class="item">
 								<blockquote>
 									<div class="row">
 										<div class="col-sm-3 text-center">
@@ -1039,23 +1091,7 @@
 										</div>
 									</div>
 								</blockquote>
-							</div>
-							<!-- Quote 2 -->
-							<div class="item">
-								<blockquote>
-									<div class="row">
-										<div class="col-sm-3 text-center">
-											<img class="img-circle"
-												src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg"
-												style="width: 100px;height:100px;">
-										</div>
-										<div class="col-sm-9">
-											<p>We have a great time working the project submitted was really good. Great job!</p>
-											<small>Abhilash</small>
-										</div>
-									</div>
-								</blockquote>
-							</div>
+							</div>-->
 							<!-- Quote 3 
 							<div class="item">
 								<blockquote>
