--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<title>Samriddhi Agarwal</title>
 	<meta name="description" content="Responsive HTML5 Template">
-	<meta name="author" content="webthemez">
+	<meta name="author" content="Samriddhi25">
 
 	<!-- Mobile Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -197,7 +197,9 @@
 					<div class="row">
 						<div class="col-md-6">
 							<h4>Front-end Intern</h4>
-							<p>Skynox Tech Pvt. Ltd.</p>
+							<a target="_blank" href="https://skynox.tech/">
+								<p>Skynox Tech Pvt. Ltd.</p>
+							</a>
 							<p><i>04/2020 - Present</i></p>
 							<p class="label label-warning">Achievements/Tasks</p>
 							<h6>● Development of Wecause Webpage</h6>
@@ -206,7 +208,9 @@
 						</div>
 						<div class="col-md-6">
 							<h4>Student Participant</h4>
-							<p>GirlScript Summer Of Code</p>
+							<a target="_blank" href="https://www.gssoc.tech/">
+								<p>GirlScript Summer Of Code</p>
+							</a>
 							<p><i>03/2020 – 06/2020</i></p>
 							<p class="label label-warning">Achievements/Tasks</p>
 							<h6>● Designing Web App</h6>
@@ -218,12 +222,16 @@
 					<div class="row">
 						<div class="col-md-6">
 							<h4>Campus Ambassdor</h4>
-							<p>Internation MUN</p>
+							<a target="_blank" href="https://www.internationalmun.org/">
+								<p>Internation MUN</p>
+							</a>
 							<p><i>06/2020 - 07/2020</i></p>
 						</div>
 						<div class="col-md-6">
 							<h4>Front-end Developer</h4>
-							<p>Wecause</p>
+							<a target="_blank" href="https://www.linkedin.com/company/causebox-inc/">
+								<p>Wecause</p>
+							</a>
 							<p><i>04/2020 – 06/2020</i></p>
 							<p class="label label-warning">Achievements/Tasks</p>
 							<h6>● Native App development</h6>
@@ -416,17 +424,20 @@
 														single platform built for social change.
 													</p>
 													<h3>Find out more about us by visiting our site:</h3>
-													<p>https://web.wecause.app</p>
+													<a target="_blank" href="https://web.wecause.app">Wecause</a>
 													<h3>Database:</h3>
-													<p>redux firebase</p>
+													<p class="label label-warning">Redux</p>
+													<p class="label label-warning">Firebase</p>
 													<h3>Development Skills:</h3>
-													<p>Reactjs redux json</p>
+													<p class="label label-danger">ReactJs</p>
+													<p class="label label-danger">Redux</p>
+													<p class="label label-danger">Json</p>
 													<h3>Project type</h3>
-													<p>Industrial</p>
+													<p class="label label-warning">Industrial</p>
 													<h3>NetworkingCompany:</h3>
-													<p>size 2-10</p>
+													<p class="label label-danger">size 2-10</p>
 													<h3>Founded:</h3>
-													<p>2018</p>
+													<p class="label label-warning">2018</p>
 												</div>
 											</div>
 										</div>
@@ -450,7 +461,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-2">Project Title</a>
+									data-target="#project-2">Ovuli</a>
 							</div>
 							<!-- Modal -->
 							<div class="modal fade" id="project-2" tabindex="-1" role="dialog"
@@ -461,7 +472,7 @@
 											<button type="button" class="close" data-dismiss="modal"><span
 													aria-hidden="true">&times;</span><span
 													class="sr-only">Close</span></button>
-											<h4 class="modal-title" id="project-2-label">Project Title</h4>
+											<h4 class="modal-title" id="project-2-label">Ovuli</h4>
 										</div>
 										<div class="modal-body scroll">
 
@@ -471,25 +482,26 @@
 													<img class="imgovuli" src="images/ovuli2.png" alt="">
 													<img class="imgovuli" src="images/ovuli3.png" alt="">
 													<img class="imgovuli" src="images/ovuli4.png" alt="">
-													<br />
+													<hr /><br />
 													<h3>Project Description</h3>
 													<p>This is currently under development that consists of main
 														functionality as using asynchronous local storage to work
 														offline, use of Internationalization to support 20+ Languages.
 														The app was designed in Figma.
 													</p>
-													<h3>Find out more about us by visiting our site:</h3>
-													<p>https://web.wecause.app</p>
+													<h3>Check the github repository for more:</h3>
+													<a target="_blank"
+														href="https://github.com/Samriddhi25/ovuli">Ovuli</a>
 													<h3>Database:</h3>
-													<p>redux firebase</p>
+													<p class="label label-danger">Json</p>
+													<p class="label label-danger"> Local storage</p>
 													<h3>Development Skills:</h3>
-													<p>Reactjs redux json</p>
+													<p class="label label-warning">React Native</p>
+													<p class="label label-warning">JavaScript</p>
 													<h3>Project type</h3>
-													<p>Industrial</p>
-													<h3>NetworkingCompany:</h3>
-													<p>size 2-10</p>
+													<p class="label label-danger">Open source</p>
 													<h3>Founded:</h3>
-													<p>2018</p>
+													<p class="label label-warning">2020</p>
 												</div>
 											</div>
 										</div>
@@ -513,7 +525,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-3">Project Title</a>
+									data-target="#project-3">Wecause App</a>
 							</div>
 							<!-- Modal -->
 							<div class="modal fade" id="project-3" tabindex="-1" role="dialog"
@@ -524,32 +536,34 @@
 											<button type="button" class="close" data-dismiss="modal"><span
 													aria-hidden="true">&times;</span><span
 													class="sr-only">Close</span></button>
-											<h4 class="modal-title" id="project-3-label">Project Title</h4>
+											<h4 class="modal-title" id="project-3-label">Wecause</h4>
 										</div>
 										<div class="modal-body scroll">
 
 											<div class="row">
 												<div class="col-md-12">
-													<img src="images/portfolio-3.jpg" alt="">
+													<img src="images/wecausemob.png" alt="">
+													<hr />
 													<br />
 													<h3>Project Description</h3>
-													<p>WeCause s an on demand platform that instantly connects
+													<p>WeCause is an on demand platform that instantly connects
 														volunteers/donors to causes in need, allowing them to recieve
 														immediate help to sustain & scale their community projects. Its
 														Purpose is to crowdsource change anytime, anywhere.
 													</p>
 													<h3>Find out more about us by visiting our site:</h3>
-													<p>https://web.wecause.app</p>
+													<a target="_blank" href="https://web.wecause.app">Wecause</a>
 													<h3>Database:</h3>
-													<p>redux firebase</p>
+													<p class="label label-danger">Redux</p>
+													<p class="label label-danger">Firebase</p>
 													<h3>Development Skills:</h3>
-													<p>React Native </p>
+													<p class="label label-warning">React Native</p>
 													<h3>Project type</h3>
-													<p>Industrial</p>
+													<p class="label label-danger">Industrial</p>
 													<h3>NetworkingCompany:</h3>
-													<p>size 2-10</p>
+													<p class="label label-warning">size 2-10</p>
 													<h3>App Developed:</h3>
-													<p>2020</p>
+													<p class="label label-danger">2020</p>
 												</div>
 											</div>
 										</div>
@@ -574,7 +588,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-4">Project Title</a>
+									data-target="#project-4">Designs</a>
 							</div>
 							<!-- Modal -->
 							<div class="modal fade" id="project-4" tabindex="-1" role="dialog"
@@ -585,21 +599,24 @@
 											<button type="button" class="close" data-dismiss="modal"><span
 													aria-hidden="true">&times;</span><span
 													class="sr-only">Close</span></button>
-											<h4 class="modal-title" id="project-4-label">Project Title</h4>
+											<h4 class="modal-title" id="project-4-label">My Designs</h4>
 										</div>
 										<div class="modal-body scroll">
 
 											<div class="row">
 												<div class="col-md-12">
-													<img src="images/portfolio-4.jpg" alt="">
+													<img class="imgdesign" src="images/Logo idea/logodesign1.png"
+														alt="">
+													<img class="imgdesign" src="images/Logo idea/WebTech_logo.png"
+														alt="">
+													<hr />
 													<br />
-													<h3>Project Description</h3>
-													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque
-														sed, quidem quis praesentium, ut unde. Quae sed, incidunt
-														laudantium nesciunt, optio corporis quod earum pariatur omnis
-														illo saepe numquam suscipit, nemo placeat dignissimos eius
-														mollitia et quas officia doloremque ipsum labore rem deserunt.
-													</p>
+													<h3>Tools Used</h3>
+													<p class="label label-warning">Adobe Illustrator</p>
+													<p class="label label-warning">Inkscape</p>
+													<p class="label label-warning">Adobe Photoshop</p>
+													<h3>Project type</h3>
+													<p class="label label-danger">Open source</p>
 												</div>
 											</div>
 										</div>
@@ -623,7 +640,7 @@
 									</a>
 								</div>
 								<a class="btn btn-default btn-block" data-toggle="modal"
-									data-target="#project-5">Project Title</a>
+									data-target="#project-5">Spotify</a>
 							</div>
 							<!-- Modal -->
 							<div class="modal fade" id="project-5" tabindex="-1" role="dialog"
@@ -634,22 +651,24 @@
 											<button type="button" class="close" data-dismiss="modal"><span
 													aria-hidden="true">&times;</span><span
 													class="sr-only">Close</span></button>
-											<h4 class="modal-title" id="project-5-label">Project Title</h4>
+											<h4 class="modal-title" id="project-5-label">Spotify-Recommendation-Engine
+											</h4>
 										</div>
 										<div class="modal-body scroll">
 
 											<div class="row">
 												<div class="col-md-12">
-													<img src="https://ucalyptus.github.io/Spotify-Recommendation-Engine/spotify.gif"
-														alt="">
+													<img class="imgspotify" src="images/spotify1.png" alt="">
+													<img class="imgspotify" src="images/spotify2.png" alt="">
+													<img class="imgspotify" src="images/spotify3.png" alt="">
+													<img class="imgspotify" src="images/spotify4.png" alt="">
+													<img class="imgspotify" src="images/spotify5.png" alt="">
+													<hr />
 													<br />
-													<h3>Project Description</h3>
-													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque
-														sed, quidem quis praesentium, ut unde. Quae sed, incidunt
-														laudantium nesciunt, optio corporis quod earum pariatur omnis
-														illo saepe numquam suscipit, nemo placeat dignissimos eius
-														mollitia et quas officia doloremque ipsum labore rem deserunt.
-													</p>
+													<h3>Tools Used</h3>
+													<p class="label label-warning">Adobe XD</p>
+													<h3>Project type</h3>
+													<p class="label label-danger">Open source</p>
 												</div>
 											</div>
 										</div>
